--- a/index.html
+++ b/index.html
@@ -7,38 +7,70 @@
   </head>
   <body>
     <form action="index.html" method="post">
-    <div id="Partie1">
-    <h1>Votre identité</h1>
-      <label for="name">1) Nom :</label>
-      <input type="text" name="name" value="nom"><br/>
-      <label for="firstName">2) Prénom :</label>
-      <input type="text" name="firstName" value="Prénom"><br/>
-      <label for="mail">3) Adresse mail</label>
-      <input type="text" name="mail" value="Adresse mail"><br/>
-    </div>
-    <div id="Partie2">
-    <h2>Adresse de livraison</h2>
-      <label for="adress">1) Adresse :</label>
-      <input type="textarea" name="adress" value="Adresse"><br/>
-      <label for="PostalCode">2) Code postal :</label>
-      <input type="text" name="PostalCode" value="Code postal"><br/>
-      <label for="City">3) Ville :</label>
-      <input type="text" name="City" value="Ville">
-    </div>
-    <div id="Partie3">
-    <h3>Informations de réglement</h3>
-      <label for="Paycart">1) Carte de paiement :</label>
-        <p id="Paycart"><label>Visa :</label>
-        <input type="radio" name="Paycart" value="Visa"><br/>
-        <p id="Paycart"><label>Mastercard :</label>
-        <input type="radio" name="Paycart" value="Mastercard"><br/>
-      <label for="CartNumber">2) Numéro de carte :</label>
-      <input type="text" name="CartNumber" value="Numéro de carte"><br/>
-      <label for="SecurityCode">3) Code de sécurité :</label>
-      <input type="text" name="SecurityCode" value="Code de sécurité"><br/>
-      <label for="NameCart">4) Nom du titulaire :</label>
-      <input type="text" name="NameCart" value="Nom du titulaire">
-    </div>
+    <fieldset class="Partie1">
+    <legend class="Partie1">Votre identité</legend>
+    <ol>
+      <li>
+        <label for="name">Nom :</label>
+        <input type="text" name="name" placeholder="nom">
+      </li>
+      <li>
+        <label for="firstName">Prénom :</label>
+        <input type="text" name="firstName" placeholder="Prénom">
+      </li>
+      <li>
+        <label for="mail">Adresse mail</label>
+        <input type="text" name="mail" placeholder="Adresse mail">
+      </li>
+    </ol>
+    </fieldset>
+    <fieldset class="Partie2">
+    <legend class="Partie2">Adresse de livraison</legend>
+    <ol>
+      <li>
+        <label for="adress">Adresse :</label>
+        <textarea name="name" rows="5" cols="50" placeholder="Adresse"></textarea>
+      </li>
+      <li>
+        <label for="PostalCode">Code postal :</label>
+        <input type="text" name="PostalCode" placeholder="Code postal">
+      </li>
+      <li>
+        <label for="City">Ville :</label>
+        <input type="text" name="City" placeholder="Ville">
+      </li>
+    </ol>
+    </fieldset>
+    <fieldset class="Partie3">
+    <legend class="Partie3">Informations de réglement</legend>
+    <div>
+    <ol>
+      <li>
+        <label for="Paycart">Carte de paiement :</label>
+            <div>
+              <input type="radio" name="Paycart" placeholder="Visa"/>
+              <label>Visa :</label>
+            </div>
+            <div>
+            <input type="radio" name="Paycart" placeholder="Mastercard"/>
+            <label>Mastercard :</label>
+          </div>
+      <li>
+        <label for="CartNumber">Numéro de carte :</label>
+        <input type="text" name="CartNumber" placeholder="Numéro de carte">
+      </li>
+      <li>
+        <label for="SecurityCode">Code de sécurité :</label>
+        <input type="text" name="SecurityCode" placeholder="Code de sécurité">
+      </li>
+      <li>
+        <label for="NameCart">Nom du titulaire :</label>
+        <input type="text" name="NameCart" placeholder="Nom du titulaire">
+      </li>
+      </li>
+    </ol>
+  </div>
+    </fieldset>
       <input type="submit" value="J'achète !"/>
     </form>
   </body>
